Sửa unit test.